# B.O.I.-MARK-2

./: .encryption_key  .env.example  .gitignore  .replit  .storage_encryption_key  .vault_key  ACCESS_CONTROL_FIX_SUMMARY.md  ADVANCED_AGI_FEATURES.md  ADVANCED_VOICE_FEATURES.md  AGI_FEATURES.md  AI_SCREEN_ANALYZER_GUIDE.md  AI_SCREEN_MONITORING_GUIDE.md  ALL_COMMANDS_REFERENCE.txt  ALL_FEATURES_PROMPT_GUIDE.md  AUTO_CALL_GUIDE.md  BLACK_WHITE_GUI_FEATURES.md  BLUETOOTH_TROUBLESHOOTING.md  BOI_FEATURES.txt  CHATBOT_INTEGRATION_GUIDE.md  CHATBOT_ORGANIZATION.md  CHAT_MONITOR_SUMMARY.md  CODEBASE_ANALYSIS.md  COMMAND_EXECUTOR_UPGRADE_SUMMARY.md  COMMON_SENSE_FEATURES.md  COMMUNICATION_ENHANCEMENTS_GUIDE.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_SYSTEM_SUMMARY.md  DESKTOP_CONTROLLER_SETUP.md  EASY_VOLUME_FIX.md  ECOSYSTEM_GUIDE.md  EMAIL_GUIDE.md  EMOTIONAL_INTELLIGENCE_FEATURES.md  ENHANCED_BLACK_WHITE_SUMMARY.md  ENHANCED_GUI_SUMMARY.md  FACE_DETECTION_SETUP_GUIDE.md  FEATURES_GUIDE.md  FEATURES_LIST.md  FEATURES_SUMMARY.md  FEATURE_IMPROVEMENTS_LOG.md  FEATURE_REGISTRY.md  (+209 more)
attached_assets/: Pasted--2025-11-16-14-56-10-759-WARNING-streamlit-runtime-scriptrunner-utils-script-run-context-Thread-M-1763285510891_1763285510892.txt  Pasted--AI-Powered-Chat-Monitor-Auto-Reply-System-Read-incoming-messages-Email-SMS-and-generat-1763811756236_1763811756240.txt  Pasted--DESKTOP-FILE-FOLDER-AUTOMATOR--1761631173164_1761631173169.txt  Pasted--DESKTOP-SYNC-MANAGER-AUTO-START-1764406120669_1764406120671.txt  Pasted--GESTURE-DETECTION-SYSTEM-AVAILABLE-GESTURES--1764102035315_1764102035318.txt  Pasted--Gemini-AI-is-ready-BOI-Good-afternoon-Sir-How-may-I-be-of-assistance-Type-a-command--1763804798980_1763804798981.txt  Pasted--Gemini-AI-is-ready-BOI-Good-afternoon-Sir-How-may-I-be-of-assistance-Type-a-command--1763807574217_1763807574217.txt  Pasted--Gemini-AI-is-ready-Type-a-command-or-click-a-Quick-Action-button-to-get-started--1761530412085_1761530412086.txt  Pasted--Gemini-AI-is-ready-Type-a-command-or-click-a-Quick-Action-button-to-get-started--1761532210298_1761532210299.txt  Pasted--Screen-size-detec-1761580859978_1761580859979.txt  (+45 more)
(+546 files in other folders)
