[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "google-genai>=1.45.0",
    "psutil>=7.1.1",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "sift-stack-py>=0.9.1",
    "speechrecognition>=3.14.3",
    "watchdog>=6.0.0",
]
