[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "VATSAL AI Desktop Automation - Python 3.11+ Compatible"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "google-genai>=1.50.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.14.3",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sift-stack-py>=0.9.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
    "webdriver-manager>=4.0.2",
]
